@@ -138,20 +138,6 @@
         };
         fullScreenApi.fullScreenEventName = "mozfullscreenchange";
         fullScreenApi.fullScreenErrorEventName = "mozfullscreenerror";
-    } else if ( typeof window.ActiveXObject !== "undefined" ) {
-        // Older IE. Note that supportsFullScreen stay to false because not all
-        // methods and events are supported.
-        // Support based on:
-        // http://stackoverflow.com/questions/1125084/how-to-make-in-javascript-full-screen-windows-stretching-all-over-the-screen/7525760
-        fullScreenApi.requestFullScreen = function() {
-            /* global ActiveXObject:true */
-            var wscript = new ActiveXObject( "WScript.Shell" );
-            if ( wscript !== null ) {
-                wscript.SendKeys( "{F11}" );
-            }
-            return false;
-        };
-        fullScreenApi.exitFullScreen = fullScreenApi.requestFullScreen;
     }
     fullScreenApi.cancelFullScreen = function() {
         $.console.error("cancelFullScreen is deprecated. Use exitFullScreen instead.");
